Imitial prototype for tiled maps previewer / editor